--- a/quiz_frontend/package.json
+++ b/quiz_frontend/package.json
@@ -28,10 +28,12 @@
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-youtube": "^7.13.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "socket.io-client": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
